# TFM

./: CHANGELOG.md  Cargo.toml  LICENSE  Readme  Readme.md  example_config.toml
.github/workflows/: release.yml
packaging/arch/: PKGBUILD.in
src/: config.rs  core.rs  example_config.toml  main.rs  markers.rs  preview.rs  security.rs  ui.rs
