[package]
name = "vfm"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
image = "0.24"
tokio = { version = "1.37", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["fs"] }
infer = "0.15"
ratatui-image = { version = "0.6", default-features = false, features = ["crossterm", "rustix"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
