[package]
name = "tfm"
version = "1.0.1"
edition = "2021"
description = "Terminal file manager (TUI)"
authors = ["Michael Weiss"]
license = "GPL-3.0-only"

[package.metadata.deb]
maintainer = "Michael Weiss"
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
	["target/release/tfm", "usr/bin/", "755"],
	["Readme.md", "usr/share/doc/tfm/Readme.md", "644"],
	["LICENSE", "usr/share/doc/tfm/LICENSE", "644"],
	["CHANGELOG.md", "usr/share/doc/tfm/CHANGELOG.md", "644"],
	["example_config.toml", "usr/share/doc/tfm/example_config.toml", "644"],
]

[package.metadata.generate-rpm]
release = "1"
url = "https://github.com"
assets = [
  { source = "target/release/tfm", dest = "/usr/bin/tfm", mode = "755" },
  { source = "Readme.md", dest = "/usr/share/doc/tfm/Readme.md", mode = "644", doc = true },
  { source = "LICENSE", dest = "/usr/share/doc/tfm/LICENSE", mode = "644", doc = true },
  { source = "CHANGELOG.md", dest = "/usr/share/doc/tfm/CHANGELOG.md", mode = "644", doc = true },
  { source = "example_config.toml", dest = "/usr/share/doc/tfm/example_config.toml", mode = "644", doc = true },
]

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
image = "0.24"
tokio = { version = "1.37", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["fs"] }
infer = "0.15"
ratatui-image = { version = "0.6", default-features = false, features = ["crossterm", "rustix"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
open = "5.3"
arboard = "3.6"
syntect = "5.3"
unicode-width = "0.2"
regex = "1.10"
